# oci2squashfs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci-code.yaml
oci_squashfs/: Cargo.toml
oci_squashfs/src/: decompress.rs  lib.rs  overlay.rs  tracker.rs  verify.rs
oci_squashfs/tests/: regression.rs
oci_squashfs_cli/: Cargo.toml
src/: canonical.rs  dir.rs  erofs.rs  image.rs  layers.rs  lib.rs  overlay.rs  squashfs.rs  tar.rs  verify.rs
tests/: canonical_and_layers.rs  e2e.rs  image.rs  integration.rs  regression.rs  squashfs.rs  streaming.rs
tests/fixtures/: mod.rs
tests/helpers/: mod.rs
