[package]
name = "oci_squashfs_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oci2squashfs"
path = "src/main.rs"

[dependencies]
oci_squashfs = { path = "../oci_squashfs" }
tokio         = { version = "1", features = ["full"] }
clap          = { version = "4", features = ["derive"] }
anyhow        = "1"
